--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Comments>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Comment Board</h3>
             <ul>
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 
