--- a/SchoolDiarySystem/Views/Parent/Create.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Create.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Parents
 
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Parent</h3>
             <ul>
@@ -50,6 +50,6 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 
 @section Scripts {}
