--- a/SchoolDiarySystem/Views/Student/Details.cshtml
+++ b/SchoolDiarySystem/Views/Student/Details.cshtml
@@ -6,7 +6,7 @@
 @model Students
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Student</h3>
             <ul>
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
