--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -6,7 +6,7 @@
 @model IEnumerable<Topics>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Topic Board</h3>
             <ul>
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 
