--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -7,7 +7,7 @@
 @model Users
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Update</h3>
             <ul>
@@ -80,7 +80,7 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
