--- a/SchoolDiarySystem/Views/Admin/Index.cshtml
+++ b/SchoolDiarySystem/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Admin Dashboard</h3>
             <ul>
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
