--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -7,7 +7,7 @@
 @model Class
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Class Create Form</h3>
             <ul>
@@ -52,7 +52,7 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 
