--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -6,127 +6,127 @@
 @model IEnumerable<Class>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
-        <div class="breadcrumbs-area">
-            <h3>Class</h3>
-            <ul>
-                <li>
-                    <a href="@Url.Action("Index", "Admin")">Home</a>
-                </li>
-                <li>All Classes</li>
-            </ul>
-        </div>
-        <div class="col-4-xxxl col-12">
-            <div class="card height-auto">
-                <div class="card-body">
-                    <div class="heading-layout1">
-                        <div class="item-title">
-                            <h3>Create A Class</h3>
-                        </div>
-                    </div>
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-12 form-group mg-t-8">
-                                <p>
-                                    @Html.ActionLink("Create", "Create", "Class", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
-                                </p>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+@*<div class="dashboard-content-one">*@
+    <div class="breadcrumbs-area">
+        <h3>Class</h3>
+        <ul>
+            <li>
+                <a href="@Url.Action("Index", "Admin")">Home</a>
+            </li>
+            <li>All Classes</li>
+        </ul>
+    </div>
+    <div class="col-4-xxxl col-12" style="display:contents">
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>All Classes Data</h3>
+                        <h3>Create A Class</h3>
                     </div>
                 </div>
-                @using (Html.BeginForm("Index", "Class", FormMethod.Get))
-                {
-                    <form class="mg-b-20">
-                        <div class="row gutters-8">
-                            <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
-                                <input type="number" autocomplete="off" name="searchString" placeholder="Search by class number ..." class="form-control">
-                            </div>
-                            <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                                <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                            </div>
+                <form class="new-added-form">
+                    <div class="row">
+                        <div class="col-12 form-group mg-t-8">
+                            <p>
+                                @Html.ActionLink("Create", "Create", "Class", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                            </p>
                         </div>
-                    </form>
-                }
-                <div class="table-responsive">
-                    <table class="table display data-table text-nowrap">
-                        <thead>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="card height-auto">
+        <div class="card-body">
+            <div class="heading-layout1">
+                <div class="item-title">
+                    <h3>All Classes Data</h3>
+                </div>
+            </div>
+            @using (Html.BeginForm("Index", "Class", FormMethod.Get))
+            {
+                <form class="mg-b-20">
+                    <div class="row gutters-8">
+                        <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
+                            <input type="number" autocomplete="off" name="searchString" placeholder="Search by class number ..." class="form-control">
+                        </div>
+                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                        </div>
+                    </div>
+                </form>
+            }
+            <div class="table-responsive">
+                <table class="table display data-table text-nowrap">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Teacher</th>
+                            <th>Class Number</th>
+                            <th>Room Type</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
-                                <th></th>
-                                <th>Teacher</th>
-                                <th>Class Number</th>
-                                <th>Room Type</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Teacher.FullName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.ClassNo)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Room.RoomType)
-                                    </td>
+                                <td></td>
+                                <td>
+                                    @Html.DisplayFor(m => item.Teacher.FullName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(m => item.ClassNo)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(m => item.Room.RoomType)
+                                </td>
 
-                                    <td>
-                                        <div class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                                <span class="flaticon-more-button-of-three-dots"></span>
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
-                                                <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
-                                                @*<a class="dropdown-item" href="@Url.Action("Details", "Class", new { id = item.ClassID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>*@
-                                            </div>
-                                            <div class="modal-box">
-                                                <!-- Modal -->
-                                                <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-                                                    <div class="modal-dialog" role="document">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title">Sure?</h5>
-                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                                    <span aria-hidden="true">×</span>
-                                                                </button>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                Are you sure you want to delete this class?
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
-                                                                @using (Html.BeginForm("Delete", "Class", new { id = item.ClassID }, FormMethod.Post))
-                                                                {
-                                                                    <input type="submit" value="Yes" class="footer-btn bg-linkedin" />
-                                                                }
-                                                            </div>
+                                <td>
+                                    <div class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                            <span class="flaticon-more-button-of-three-dots"></span>
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right">
+                                            <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                            <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                            @*<a class="dropdown-item" href="@Url.Action("Details", "Class", new { id = item.ClassID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>*@
+                                        </div>
+                                        <div class="modal-box">
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                                <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title">Sure?</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">×</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Are you sure you want to delete this class?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
+                                                            @using (Html.BeginForm("Delete", "Class", new { id = item.ClassID }, FormMethod.Post))
+                                                            {
+                                                                <input type="submit" value="Yes" class="footer-btn bg-linkedin" />
+                                                            }
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+@*</div>*@
 @*</div>*@
 
 @section Scripts {}
