--- a/SchoolDiarySystem/Views/Comment/Review.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Review.cshtml
@@ -2,7 +2,7 @@
 @model Reviews
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Review</h3>
             <ul>
@@ -42,7 +42,7 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
