--- a/SchoolDiarySystem/Views/MyKids/Index.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/Index.cshtml
@@ -6,7 +6,7 @@
 @model IEnumerable<Students>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Parent Dashboard</h3>
             <ul>
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
