--- a/SchoolDiarySystem/Views/MyKids/IndexClass.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/IndexClass.cshtml
@@ -6,7 +6,7 @@
 @model IEnumerable<Class>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Class</h3>
             <ul>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
