--- a/SchoolDiarySystem/Views/Parent/Index.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Index.cshtml
@@ -6,101 +6,101 @@
 @model IEnumerable<Parents>
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
-        <div class="breadcrumbs-area">
-            <h3>Parent</h3>
-            <ul>
-                <li>
-                    <a href="@Url.Action("Index", "Admin")">Home</a>
-                </li>
-                <li>All Parents</li>
-            </ul>
-        </div>
-        <div class="col-4-xxxl col-12">
-            <div class="card height-auto">
-                <div class="card-body">
-                    <div class="heading-layout1">
-                        <div class="item-title">
-                            <h3>Create A Parent</h3>
-                        </div>
-                    </div>
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-12 form-group mg-t-8">
-                                <p>
-                                    @Html.ActionLink("Create", "Create", "Parent", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
-                                </p>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+@*<div class="dashboard-content-one">*@
+    <div class="breadcrumbs-area">
+        <h3>Parent</h3>
+        <ul>
+            <li>
+                <a href="@Url.Action("Index", "Admin")">Home</a>
+            </li>
+            <li>All Parents</li>
+        </ul>
+    </div>
+    <div class="col-4-xxxl col-12" style="display:contents">
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>All Parents Data</h3>
+                        <h3>Create A Parent</h3>
                     </div>
                 </div>
-                @using (Html.BeginForm("Index", "Parent", FormMethod.Get))
-                {
-                    <form class="mg-b-20">
-                        <div class="row gutters-8">
-                            <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
-                                <input type="text" autocomplete="off" placeholder="Search by Name ..." name="searchString" class="form-control">
-                            </div>
-                            <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                                <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                            </div>
+                <form class="new-added-form">
+                    <div class="row">
+                        <div class="col-12 form-group mg-t-8">
+                            <p>
+                                @Html.ActionLink("Create", "Create", "Parent", null, new { @class = "btn-fill-lg font-normal text-light gradient-pastel-green" })
+                            </p>
                         </div>
-                    </form>
-                }
-                <div class="table-responsive">
-                    <table class="table display data-table text-nowrap">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>City</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td></td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.FirstName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.LastName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.City)
-                                    </td>
-
-                                    <td>
-                                        <div class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                                <span class="flaticon-more-button-of-three-dots"></span>
-                                            </a>
-                                            <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="@Url.Action("Update", "Parent", new { id = item.ParentID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
-                                                <a class="dropdown-item" href="@Url.Action("Details", "Parent", new { id = item.ParentID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
+    <div class="card height-auto">
+        <div class="card-body">
+            <div class="heading-layout1">
+                <div class="item-title">
+                    <h3>All Parents Data</h3>
+                </div>
+            </div>
+            @using (Html.BeginForm("Index", "Parent", FormMethod.Get))
+            {
+                <form class="mg-b-20">
+                    <div class="row gutters-8">
+                        <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
+                            <input type="text" autocomplete="off" placeholder="Search by Name ..." name="searchString" class="form-control">
+                        </div>
+                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                        </div>
+                    </div>
+                </form>
+            }
+            <div class="table-responsive">
+                <table class="table display data-table text-nowrap">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>City</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td></td>
+                                <td>
+                                    @Html.DisplayFor(m => item.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(m => item.LastName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(m => item.City)
+                                </td>
+
+                                <td>
+                                    <div class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                            <span class="flaticon-more-button-of-three-dots"></span>
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right">
+                                            <a class="dropdown-item" href="@Url.Action("Update", "Parent", new { id = item.ParentID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                            <a class="dropdown-item" href="@Url.Action("Details", "Parent", new { id = item.ParentID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+@*</div>*@
 @*</div>*@
 
 @section Scripts {}
