--- a/SchoolDiarySystem/Views/Room/Create.cshtml
+++ b/SchoolDiarySystem/Views/Room/Create.cshtml
@@ -7,7 +7,7 @@
 
 
 @*<div class="dashboard-page-one">*@
-<div class="dashboard-content-one">
+@*<div class="dashboard-content-one">*@
     <div class="breadcrumbs-area">
         <h3>Room</h3>
         <ul>
@@ -47,7 +47,7 @@
             }
         </div>
     </div>
-</div>
+@*</div>*@
 @*</div>*@
 
 @section Scripts {}
