--- a/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
@@ -45,7 +45,7 @@
     <!-- Preloader Start Here -->
     @*<div id="preloader"></div>*@
     <!-- Preloader End Here -->
-    <div id="wrapper" class="wrapper bg-ash" style="display: inline;">
+    <div id="wrapper" class="wrapper bg-ash">
         <!-- Header Menu Area Start Here -->
         <div class="navbar navbar-expand-md header-menu-one bg-light">
             <div class="nav-bar-header-one">
@@ -116,7 +116,7 @@
         </div>
         <!-- Header Menu Area End Here -->
         <!-- Page Area Start Here -->
-        <div class="dashboard-page-one" style="height: 100%;">
+        <div class="dashboard-page-one" style="height: 100%; width: 100%; position:fixed;">
             <!-- Sidebar Area Start Here -->
             <div class="sidebar-main sidebar-menu-one sidebar-expand-md sidebar-color">
                 <div class="mobile-sidebar-header d-md-none">
