--- a/SchoolDiarySystem/Views/Topic/Create.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Create.cshtml
@@ -6,7 +6,7 @@
 @model Topics
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Topic</h3>
             <ul>
@@ -62,7 +62,7 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
