--- a/SchoolDiarySystem/Views/User/ChangePassword.cshtml
+++ b/SchoolDiarySystem/Views/User/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 @model Users
 
 @*<div class="dashboard-page-one">*@
-    <div class="dashboard-content-one">
+    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Change Password</h3>
             <ul>
@@ -47,7 +47,7 @@
                 }
             </div>
         </div>
-    </div>
+    @*</div>*@
 @*</div>*@
 
 @section Scripts {}
